--- a/python.html
+++ b/python.html
@@ -4,7 +4,7 @@
     <title>Python Page</title>
     <style>
       h1 {
-        color: crimson;
+        color: rgb(2, 4, 112);
       }
       p {
         color: rgb(21, 255, 0);
